--- a/index.html
+++ b/index.html
@@ -74,11 +74,13 @@
                 <span id="arrow-left" class="material-icons arrow">
                     arrow_back_ios
                 </span>
-                <img class="food-img" src="images/burger.jpg" alt="burger"/>
-                <img class="food-img hide" src="images/coffee.jpg" alt="coffee"/>
-                <img class="food-img hide" src="images/egg and salad.jpg" alt="egg"/>
-                <img class="food-img hide" src="images/fries.jpg" alt="fries"/>
-                <img class="food-img hide" src="images/pancake.jpg" alt="pancake"/>
+                <div id="img-div">
+                    <img class="food-img" src="images/burger.jpg" alt="burger"/>
+                    <img class="food-img hide" src="images/coffee.jpg" alt="coffee"/>
+                    <img class="food-img hide" src="images/egg and salad.jpg" alt="egg"/>
+                    <img class="food-img hide" src="images/fries.jpg" alt="fries"/>
+                    <img class="food-img hide" src="images/pancake.jpg" alt="pancake"/>
+                </div>
                 <span id="arrow-right" class="material-icons arrow">
                     arrow_forward_ios
                 </span>
